11Sep01=======================================================================
1. added IP address logging of connections
10Sep01=======================================================================
1. clear/* node_default and user_default now work.
2. in acc or rej/* you can now use (comma separated) prefixes as well as lists
of numbers for things like *_dxcc, *_itu and *_cq (eg: by_dxcc ve,w); just
remember that countries like ve and w have lots of zones and itus!
3. Added all the clear/* commands to help and added some comments about 2.
4. All filters (including *_default ones) are now reinstalled on channels in
realtime, so changing a filter does NOT require a disconnect and reconnect
cycle anymore. 
09Sep01=======================================================================
1. Add show/dxstats command
2. Add show/hfstats command
3. Add show/vhfstats command
4. Add show/hftable command
5. Add show/vhftable command (BE WARNED, the first time you run one of these
commands it will take some considerable time to complete, thereafter it will
be a lot faster).
08Sep01=======================================================================
1. Update the sgml docs on filtering a bit.
06Sep01=======================================================================
1. prevent nodes appearing as users from incoming PC16s
2. Change ping averaging to be like TCP and become a smoothed RTT.
3. Make all the Prompts in stat/* like output appear in alphebetical order
4. Fix problem with 17m spots not appearing in sh/dx
5. pump up eph dups everytime they re-occur and increase life to 180 secs
04Sep01=======================================================================
1. add delete/user command
03Sep01=======================================================================
1. make spot dups look back 5 mins.
2. strip the top off each character in any text field of a Spot for duping.
3. Try to make the routing tables more accurate for users that login to
more than one node.